# mcpwatch-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/basic/: main.py
src/mcpwatch/: __init__.py  batcher.py  client.py  instrument.py  interceptors.py  transport.py  types.py  utils.py
tests/: test_batcher.py  test_client.py  test_instrument.py
