[project]
name = "mcpwatch"
version = "0.1.0"
description = "MCPWatch SDK for MCP server observability"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mcp>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpwatch"]
